source/gameengine/Ketsji/KX_Dome.cpp
@@ -2045,8 +2045,5 @@ void KX_Dome::RenderDomeFrame(KX_Scene* scene, KX_Camera* cam, int i)
 
 	scene->CalculateVisibleMeshes(m_rasterizer,cam);
 	scene->RenderBuckets(camtrans, m_rasterizer);
-
-	// update levels of detail
-	scene->UpdateObjectLods();
 }
 
