source/gameengine/Ketsji/KX_KetsjiEngine.cpp
@@ -686,6 +686,9 @@ bool KX_KetsjiEngine::NextFrame()
 				SG_SetActiveStage(SG_STAGE_ACTUATOR_UPDATE);
 				scene->UpdateParents(m_frameTime);
 
+				// update levels of detail
+				scene->UpdateObjectLods();
+
 				if (!GetRestrictAnimationFPS())
 				{
 					m_logger->StartLog(tc_animations, m_kxsystem->GetTimeInSeconds(), true);
@@ -1315,9 +1318,6 @@ void KX_KetsjiEngine::RenderFrame(KX_Scene* scene, KX_Camera* cam)
 	SG_SetActiveStage(SG_STAGE_CULLING);
 
 	scene->CalculateVisibleMeshes(m_rasterizer,cam);
-
-	// update levels of detail
-	scene->UpdateObjectLods();
 
 	m_logger->StartLog(tc_rasterizer, m_kxsystem->GetTimeInSeconds(), true);
 	SG_SetActiveStage(SG_STAGE_RENDER);
